@@ -350,3 +350,5 @@
 - sendto_serv_butone_token_opt ()..
 - Small testing stuff
 - In ./Config it runs a quick test to see how many socket()s you can do
+- Fixed the double +cF notice on local connections exiting, ugly hack
+- Removed the last traces of unix sockets, flag 0x10 free now
